ui: added comments

--- a/imports/ui/pages/class/class.html
+++ b/imports/ui/pages/class/class.html
@@ -71,6 +71,11 @@
             {{/unless}}
         {{/onLoaded}}
 
+
+        {{! ---------------------------------------------- }}
+        {{! competency category cards with collapse effect }}
+        {{! ---------------------------------------------- }}
+
         {{#onLoaded loaded=competencyCategories}}
             <div class="row">
            {{#each category in competencyCategories}}
