ui: user page fix errors with users that have no account

--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -202,6 +202,12 @@
         </div>
     {{/if}}
 
+    {{#if hasNoAccount}}
+        <div class="alert alert-warning">
+            {{i18n "pages.user.noAccount"}}
+        </div>
+    {{/if}}
+
 
     {{#if competencyCategories}}
         {{#each category in competencyCategories}}
