--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -245,7 +245,7 @@
                             <div class="d-flex justify-content-between align-items-center px-2">
 
                                 {{! left side: competency development status }}
-                                <span class="w-50">
+                                <small class="w-50">
                                     <span class="d-block text-center text-primary">
                                         {{#onLoaded loaded=competenciesLoaded}}
                                             {{>icon name=competency.icon}}
@@ -254,10 +254,10 @@
                                     <span class="d-block text-center">
                                         {{i18n competency.developmentLabel}}
                                     </span>
-                                </span>
+                                </small>
 
                                 {{! right side: competency accomplishement }}
-                                <span class="w-50 text-center">
+                                <small class="w-50 text-center">
                                     <div class="progress" style="height: 0.5rem;">
                                         <div class="progress-bar bg-{{#if competency.isGraded}}success{{else}}gray{{/if}}"
                                              role="progressbar"
@@ -267,7 +267,7 @@
                                              aria-valuemax="100"></div>
                                     </div>
                                     {{i18n competency.gradeLabel}}
-                                </span>
+                                </small>
                             </div>
                         </div>
                         {{else}}
